@@ -38,6 +38,7 @@
     * 1072 FIX: printer_supply: fix colors of Perf-O-Meter on HP OfficeJet...
     * 0950 FIX: check_mkevents: now able to resolve the hostname of the remote hosts...
     * 0177 FIX: esx_vsphere_hostsystem.multipath: Fixed return state in case of paths in standby...
+    * 0631 FIX: fc_port: several fixes for the perfometer to display the right values...
 
     Multisite:
     * 1013 Sort host names naturally, e.g. foobar11 comes after foobar2...
